--- a/k8s/service/kube-dns.yml
+++ b/k8s/service/kube-dns.yml
@@ -10,3 +10,11 @@ metadata:
 spec:
   selector:
     k8s-app: kube-dns
+  clusterIP: 10.101.89.118
+  ports:
+    - name: dns
+      port: 53
+      protocol: UDP
+    - name: dns-tcp
+      port: 53
+      protocol: TCP
