--- a/k8s/pod/pod-dispatch/deployment/nginx-deploy-new.yml
+++ b/k8s/pod/pod-dispatch/deployment/nginx-deploy-new.yml
@@ -23,7 +23,7 @@ spec:
             - containerPort: 80
   revisionHistoryLimit: 3 #保留历史版本，默认是 10
   paused: false  #暂停部署，默认为 false
-  progressDeadlineSeconds: 600  #部署超市时间，默认 600s
+  progressDeadlineSeconds: 600  #部署超时时间，默认 600s
   strategy:
     type: RollingUpdate  #滚动更新策略   还有一种策略Recreate
     rollingUpdate:  #滚动更新
