--- a/k8s/security/cluster_role_binding/cluster-role-binding-demo.yml
+++ b/k8s/security/cluster_role_binding/cluster-role-binding-demo.yml
@@ -5,7 +5,7 @@ metadata:
 subjects:
   - kind: User
     name: yss-cluster
-    apiGroup: rbac.authorization.k8s.io
+    apiGroup: rbac.authorization.k8s.io   #用户和组用rbac.authorization.k8s.io，serviceaccount用 “”
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
