--- a/ansible_role/init_linux_role/init_linux/tasks/main.yml
+++ b/ansible_role/init_linux_role/init_linux/tasks/main.yml
@@ -14,6 +14,7 @@
 - include: start_ntp.yml
 - include: add_docker_repo.yml
 - include: install_docker.yml
+- include: enable_docker.yml
 #- include: install_docker_compose.yml
 - include: config_docker.yml
 
