--- a/docker_compose/monitor/grafana-provisioning/datasources/grafana-provisioning.yml
+++ b/docker_compose/monitor/grafana-provisioning/datasources/grafana-provisioning.yml
@@ -4,5 +4,5 @@ datasources:
   - name: Thanos
     type: prometheus
     access: proxy
-    url: http://thanos-query:10904
+    url: http://172.19.249.108:10904
     isDefault: true
