--- a/docker_compose/local_monitor/prometheus.yml
+++ b/docker_compose/local_monitor/prometheus.yml
@@ -1,6 +1,9 @@
 global:
   scrape_interval: 15s
   evaluation_interval: 15s
+  external_labels:
+    custom_id: 'aliyun'
+    enviroment: 'prod'
 
 alerting:
   alertmanagers:
