--- a/docker_compose/local_monitor/docker-compose.yml
+++ b/docker_compose/local_monitor/docker-compose.yml
@@ -22,11 +22,12 @@ services:
     command:
       - '--config.file=/etc/alertmanager/alertmanager.yml'
       - '--storage.path=/alertmanager'
+      - '--web.listen-address=0.0.0.0:9099'  # 修改监听端口为 9094
     volumes:
       - ./alertmanager.yml:/etc/alertmanager/alertmanager.yml
       - alertmanager_data:/alertmanager
     ports:
-      - "9093:9093"
+      - "9099:9099"
     restart: unless-stopped
     depends_on:
       - prometheus
