--- a/k8s/storageclass/sc-ebs.yml
+++ b/k8s/storageclass/sc-ebs.yml
@@ -1,8 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: standard
-  namespace: yss
+  name: standard  #storageclass是集群级别的资源，没有namespace的概念
 provisioner: kubernetes.io/aws-ebs
 parameters:
   type: gp2
