thanos 添加 rules 报警规则
local_monitor 添加 process-exporter

--- a/docker_compose/local_monitor/docker-compose.yml
+++ b/docker_compose/local_monitor/docker-compose.yml
@@ -45,6 +45,17 @@ services:
     ports:
       - "9100:9100"
 
+  process_exporter:
+    image: ncabatoff/process-exporter:latest
+    container_name: process_exporter
+    command:
+      - '--config.path=/etc/process-exporter/config.yml'
+    volumes:
+      - ./process-exporter.yml:/etc/process-exporter/config.yml
+    ports:
+      - "9256:9256"
+    restart: unless-stopped
+
 volumes:
   prometheus_data:
   alertmanager_data:
